# UAVEskf

./: .gitignore  README.md  install.ps1  installation.txt  pyproject.toml  requirements.txt
configs/: eskf_config.yaml  settings.json
scripts/: automatic_control.py  eskf.py  main.py  manual_control.py
src/fusionUAV/eskf/: __init__.py  eskf_filter.py  inject.py  jacobian.py  predict.py  reset.py  state.py  update_baro.py  update_gps.py  update_mag.py
src/fusionUAV/runtime/: __init__.py  automatic_control.py  eskf_runtime.py  manual_control.py  run_logger.py
src/fusionUAV/sensors/: airsim_io.py  build_from_settings.py
src/fusionUAV/utils/: rotations.py
src/fusionUAV/visualization/: airsim_plot.py  live_plot.py
